Added stubs and pseudocode for project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(DungeonCrawler)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(DungeonCrawler main.cpp)
+add_executable(DungeonCrawler main.cpp
+        dungeonCrawler.cpp
+        dungeonCrawler.h)
